# multi-agent-capella-ai-services

./: LICENSE  README.md  pyproject.toml
output/: seinfeld_script.md
seinfeld_script_generator/src/: main.py
seinfeld_script_generator/src/config/: agents.yaml
seinfeld_script_generator/src/seinfeld_script_generator/: crew.py
seinfeld_script_generator/src/seinfeld_script_generator/config/: tasks.yaml
seinfeld_script_generator/src/seinfeld_script_generator/tools/: __init__.py
seinfeld_script_generator/src/tools/: couchbase_rag.py
src/seinfeld_script_generator/: __init__.py
